<resources>
    <string name="app_name">Grade Calculator</string>
    <string name="email_intent_chooser">Select email application</string>
    <string name="showcase_confirm">GOT IT</string>

    <!-- MainActivity.java -->
    <string name="main_activity_tab_calculator">Calculator</string>
    <string name="main_activity_tab_assessments">Assessments</string>
    <string name="main_activity_tab_settings">Settings</string>

    <!-- HelpActivity.java -->
    <string name="help_activity_email_bug_report_subject">Bug Report: Grade Calculator</string>
    <string name="help_activity_email_bug_report_text">What can I help you with?\n</string>
    <string name="help_activity_email_feedback_subject">Feedback: Grade Calculator</string>
    <string name="help_activity_email_feedback_text">What can I help you with?\n</string>

    <!-- AssessmentsFragment.java -->
    <string name="assessments_frag_showcase_fab">Tap here to enter the grade and weight for an assessment</string>
    <string name="assessments_frag_showcase_heading">You can edit or delete any of these by tapping on them</string>

    <!-- MainFragment.java -->
    <string name="main_frag_showcase_switch">Switch this off if you do not know your current grade\n\nSwiping to the Assessment tab will then be available</string>
    <string name="main_frag_showcase_current_grade">Enter your current weighted unit grade</string>
    <string name="main_frag_showcase_desired_grade">Enter the grade that you are aiming for</string>
    <string name="main_frag_showcase_final_weight">Enter the weight of the final assessment in your unit</string>

    <!-- NewAssessmentDialogFragment.java -->
    <string name="dialog_new_assessment_title">Add Assessment Grade</string>
    <string name="dialog_new_assessment_positive_button">OK</string>
    <string name="dialog_new_assessment_negative_button">Cancel</string>
    <string name="dialog_new_assessment_neutral_button">Delete</string>
    <string name="dialog_new_assessment_error">Invalid Value</string>

    <!-- SettingsFragment.java -->
    <string name="feedback_email_subject">Feedback about Grade Calculator</string>
    <string name="feedback_email_text">What can I help you with?</string>

    <!-- fragment_assessments.xml -->
    <string name="assessments_list_weight">Weight</string>
    <string name="assessments_list_grade">Grade</string>

    <!-- fragment_main.xml -->
    <string name="switch_description">Do you know your current grade?</string>
    <string name="hint_current_grade">Current Grade (%)</string>
    <string name="hint_desired_grade">Desired Grade (%)</string>
    <string name="hint_weight_exam">Weight of Exam (%)</string>
    <string name="desired_result_description">Enter assessments grade details and your desired grade.\n The final assessment grade needed to achieve your desired grade will show up here.</string>

    <!-- fragment_new_assessment.xml -->
    <string name="hint_enter_weight">Enter Weight (%)</string>
    <string name="hint_enter_grade">Enter Grade (%)</string>

    <!-- list_header.xml -->
    <string name="list_header_grade">Grade</string>
    <string name="list_header_weight">Weight</string>

    <!-- menu_help.xml -->
    <string name="action_report_a_problem">Report a Problem</string>
    <string name="action_give_feedback">Give Feedback</string>
    <string name="action_about">About</string>

    <!-- menu_main.xml -->
    <string name="action_help_and_feedback">About &amp; Feedback</string>
    <string name="action_settings">Settings</string>

    <!-- pref_help.xml -->
    <string name="pref_app">App</string>
    <string name="pref_app_description">Description</string>
    <string name="pref_app_description_summary">App that allows students to calculate their current grade in a unit, and how much they need in the final assessment in order to achieve their desired grade.</string>
    <string name="pref_app_rate">Rate This App</string>
    <string name="pref_app_rate_summary">Go to Google Play Store</string>
    <string name="pref_app_source_code">Source Code</string>
    <string name="pref_app_version">Version</string>
    <string name="pref_app_version_summary">1.0.0</string>
    <string name="pref_external_libraries_used">External Libraries Used</string>
    <string name="pref_external_libraries_used_fab">FloatingActionButton</string>
    <string name="pref_external_libraries_used_showcase">MaterialShowcaseView</string>
    <string name="view_source_code_on_github">View source code on Github</string>
    <string name="pref_credits">Credits</string>
    <string name="pref_credits_math_easy_solutions">Math Easy Solutions</string>
    <string name="pref_credits_math_easy_solutions_summary">The equations for calculating the final exam grade needed</string>
    <string name="pref_credits_dakirby309">dAKirby309</string>
    <string name="pref_credits_dakirby309_summary">The calculator icon inside the app icon</string>

</resources>
