<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_app">
        <Preference
            android:summary="@string/pref_app_description_summary"
            android:title="@string/pref_app_description" />

        <Preference
            android:summary="@string/pref_app_rate_summary"
            android:title="@string/pref_app_rate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/kaozgamer/GradeCalculator" />
        </Preference>

        <Preference
            android:summary="@string/view_source_code_on_github"
            android:title="@string/pref_app_source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/kaozgamer/GradeCalculator" />
        </Preference>

        <Preference
            android:summary="@string/pref_app_version_summary"
            android:title="@string/pref_app_version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_external_libraries_used">

        <Preference
            android:summary="@string/view_source_code_on_github"
            android:title="@string/pref_external_libraries_used_fab">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/makovkastar/FloatingActionButton" />
        </Preference>

        <Preference
            android:summary="@string/view_source_code_on_github"
            android:title="@string/pref_external_libraries_used_showcase">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/deano2390/MaterialShowcaseView" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_credits">

        <Preference
            android:summary="@string/pref_credits_math_easy_solutions_summary"
            android:title="@string/pref_credits_math_easy_solutions">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://gradecalculator.mes.fm/" />
        </Preference>

        <Preference
            android:summary="@string/pref_credits_dakirby309_summary"
            android:title="@string/pref_credits_dakirby309">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://dakirby309.deviantart.com/" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>